# the-ai-among-us

./: README.md  pyproject.toml  settings.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
src/: server.py
src/ai_among_us/config/: config.py  settings.toml
src/ai_among_us/gameplay/: README.md  __init__.py  button.py  game.py  network.py  player.py
src/ai_among_us/gameplay/resources/: gameplay_prompts.csv
src/backend_service/: api.py
src/front_end/: home.py
src/front_end/pages/: 1_join_session.py
src/scripts/: README.md  client.py  server.py
src/utils/: exception_logging.py
tests/test_ai_among_us/utils/: test_exception_logging.py
